--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,4 @@
-@charset "UTF-8";
-/* line 5, C:\Ruby200\lib\ruby\gems\2.0.0\gems\compass-core-1.0.0.alpha.20\stylesheets\compass\reset\_utilities.scss */
+/* line 5, C:\Ruby200-x64\lib\ruby\gems\2.0.0\gems\compass-core-1.0.0.alpha.20\stylesheets\compass\reset\_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -20,67 +19,71 @@ time, mark, audio, video {
   font-size: 100%;
   vertical-align: baseline; }
 
-/* line 22, C:\Ruby200\lib\ruby\gems\2.0.0\gems\compass-core-1.0.0.alpha.20\stylesheets\compass\reset\_utilities.scss */
+/* line 22, C:\Ruby200-x64\lib\ruby\gems\2.0.0\gems\compass-core-1.0.0.alpha.20\stylesheets\compass\reset\_utilities.scss */
 html {
   line-height: 1; }
 
-/* line 24, C:\Ruby200\lib\ruby\gems\2.0.0\gems\compass-core-1.0.0.alpha.20\stylesheets\compass\reset\_utilities.scss */
+/* line 24, C:\Ruby200-x64\lib\ruby\gems\2.0.0\gems\compass-core-1.0.0.alpha.20\stylesheets\compass\reset\_utilities.scss */
 ol, ul {
   list-style: none; }
 
-/* line 26, C:\Ruby200\lib\ruby\gems\2.0.0\gems\compass-core-1.0.0.alpha.20\stylesheets\compass\reset\_utilities.scss */
+/* line 26, C:\Ruby200-x64\lib\ruby\gems\2.0.0\gems\compass-core-1.0.0.alpha.20\stylesheets\compass\reset\_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0; }
 
-/* line 28, C:\Ruby200\lib\ruby\gems\2.0.0\gems\compass-core-1.0.0.alpha.20\stylesheets\compass\reset\_utilities.scss */
+/* line 28, C:\Ruby200-x64\lib\ruby\gems\2.0.0\gems\compass-core-1.0.0.alpha.20\stylesheets\compass\reset\_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle; }
 
-/* line 30, C:\Ruby200\lib\ruby\gems\2.0.0\gems\compass-core-1.0.0.alpha.20\stylesheets\compass\reset\_utilities.scss */
+/* line 30, C:\Ruby200-x64\lib\ruby\gems\2.0.0\gems\compass-core-1.0.0.alpha.20\stylesheets\compass\reset\_utilities.scss */
 q, blockquote {
   quotes: none; }
-  /* line 103, C:\Ruby200\lib\ruby\gems\2.0.0\gems\compass-core-1.0.0.alpha.20\stylesheets\compass\reset\_utilities.scss */
+  /* line 103, C:\Ruby200-x64\lib\ruby\gems\2.0.0\gems\compass-core-1.0.0.alpha.20\stylesheets\compass\reset\_utilities.scss */
   q:before, q:after, blockquote:before, blockquote:after {
     content: "";
     content: none; }
 
-/* line 32, C:\Ruby200\lib\ruby\gems\2.0.0\gems\compass-core-1.0.0.alpha.20\stylesheets\compass\reset\_utilities.scss */
+/* line 32, C:\Ruby200-x64\lib\ruby\gems\2.0.0\gems\compass-core-1.0.0.alpha.20\stylesheets\compass\reset\_utilities.scss */
 a img {
   border: none; }
 
-/* line 116, C:\Ruby200\lib\ruby\gems\2.0.0\gems\compass-core-1.0.0.alpha.20\stylesheets\compass\reset\_utilities.scss */
+/* line 116, C:\Ruby200-x64\lib\ruby\gems\2.0.0\gems\compass-core-1.0.0.alpha.20\stylesheets\compass\reset\_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block; }
 
 /*
-範例
+ex.
 .title1 {
     @include bp(area-max) {
         content:'max';
         font-size: 72px;
     }
     @include bp(area-301) {
-        content:'小於1280px';
+        content:'<1280px';
         font-size: 48px;
     }
     @include bp(area-201) {
-        content:'小於980px';
+        content:'<980px';
         font-size: 36px;
     }
     @include bp(area-101) {
-        content:'小於767px';
+        content:'<767px';
         font-size: 20px;
     }
     @include bp(area-001) {
-        content:'小於480px';
+        content:'<480px';
         font-size: 12px;
     }
 }
 */
-/* line 31, ../sass/home.scss */
+/* line 30, ../sass/home.scss */
+body {
+  background-color: #880303; }
+
+/* line 33, ../sass/home.scss */
 #home {
   position: absolute;
   width: 1280px;
@@ -91,19 +94,19 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   margin-top: -415px;
   overflow: hidden; }
   @media screen and (max-width: 1048px) {
-    /* line 31, ../sass/home.scss */
+    /* line 33, ../sass/home.scss */
     #home {
       position: absolute;
       left: -116px;
       margin-left: 0px; } }
   @media screen and (max-height: 717px) {
-    /* line 31, ../sass/home.scss */
+    /* line 33, ../sass/home.scss */
     #home {
       position: absolute;
       top: -56px;
       margin-top: 0px;
       overflow: hidden; } }
-  /* line 58, ../sass/home.scss */
+  /* line 60, ../sass/home.scss */
   #home #product {
     position: absolute;
     overflow: hidden;
@@ -111,7 +114,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
     left: 248px;
     width: 789px;
     height: 387px; }
-  /* line 61, ../sass/home.scss */
+  /* line 63, ../sass/home.scss */
   #home #title {
     position: absolute;
     overflow: hidden;
@@ -119,7 +122,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
     left: 481px;
     width: 318px;
     height: 319px; }
-  /* line 64, ../sass/home.scss */
+  /* line 66, ../sass/home.scss */
   #home #play_game_1up {
     cursor: pointer;
     position: absolute;
@@ -128,7 +131,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
     left: 370px;
     width: 96px;
     height: 126px; }
-  /* line 68, ../sass/home.scss */
+  /* line 70, ../sass/home.scss */
   #home #play_game_2up {
     cursor: pointer;
     position: absolute;
@@ -137,7 +140,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
     left: 818px;
     width: 99px;
     height: 122px; }
-  /* line 72, ../sass/home.scss */
+  /* line 74, ../sass/home.scss */
   #home #SP {
     position: absolute;
     overflow: hidden;
@@ -145,3 +148,283 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
     left: 157px;
     width: 213px;
     height: 78px; }
+
+/* line 5, C:\Ruby200-x64\lib\ruby\gems\2.0.0\gems\compass-core-1.0.0.alpha.20\stylesheets\compass\reset\_utilities.scss */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font: inherit;
+  font-size: 100%;
+  vertical-align: baseline; }
+
+/* line 22, C:\Ruby200-x64\lib\ruby\gems\2.0.0\gems\compass-core-1.0.0.alpha.20\stylesheets\compass\reset\_utilities.scss */
+html {
+  line-height: 1; }
+
+/* line 24, C:\Ruby200-x64\lib\ruby\gems\2.0.0\gems\compass-core-1.0.0.alpha.20\stylesheets\compass\reset\_utilities.scss */
+ol, ul {
+  list-style: none; }
+
+/* line 26, C:\Ruby200-x64\lib\ruby\gems\2.0.0\gems\compass-core-1.0.0.alpha.20\stylesheets\compass\reset\_utilities.scss */
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+/* line 28, C:\Ruby200-x64\lib\ruby\gems\2.0.0\gems\compass-core-1.0.0.alpha.20\stylesheets\compass\reset\_utilities.scss */
+caption, th, td {
+  text-align: left;
+  font-weight: normal;
+  vertical-align: middle; }
+
+/* line 30, C:\Ruby200-x64\lib\ruby\gems\2.0.0\gems\compass-core-1.0.0.alpha.20\stylesheets\compass\reset\_utilities.scss */
+q, blockquote {
+  quotes: none; }
+  /* line 103, C:\Ruby200-x64\lib\ruby\gems\2.0.0\gems\compass-core-1.0.0.alpha.20\stylesheets\compass\reset\_utilities.scss */
+  q:before, q:after, blockquote:before, blockquote:after {
+    content: "";
+    content: none; }
+
+/* line 32, C:\Ruby200-x64\lib\ruby\gems\2.0.0\gems\compass-core-1.0.0.alpha.20\stylesheets\compass\reset\_utilities.scss */
+a img {
+  border: none; }
+
+/* line 116, C:\Ruby200-x64\lib\ruby\gems\2.0.0\gems\compass-core-1.0.0.alpha.20\stylesheets\compass\reset\_utilities.scss */
+article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
+  display: block; }
+
+/*
+ex.
+.title1 {
+    @include bp(area-max) {
+        content:'max';
+        font-size: 72px;
+    }
+    @include bp(area-301) {
+        content:'<1280px';
+        font-size: 48px;
+    }
+    @include bp(area-201) {
+        content:'<980px';
+        font-size: 36px;
+    }
+    @include bp(area-101) {
+        content:'<767px';
+        font-size: 20px;
+    }
+    @include bp(area-001) {
+        content:'<480px';
+        font-size: 12px;
+    }
+}
+*/
+/*
+body{
+    background-color: #880303;
+    min-width: 990px;
+    min-height: 680px;
+    //overflow: hidden;
+    @media screen and (max-width: 1114px)  { 
+        //overflow: auto;
+    }    
+    
+    @media screen and (max-height: 705px)  { 
+       //overflow: auto;
+    }
+
+}
+#preloading{
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    bottom: 0px;
+    right: 0px;
+    background-color: #880303;
+    //background-color: transparent;
+    #loading{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 35px;
+        height: 35px;
+        margin-top: -17px;
+        margin-left: -17px;
+    }
+}
+
+#nav {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin-top: -358px;
+    margin-left: -522px;    
+    width: 1009px;
+    height: 52px;   
+    
+    @media screen and (max-width: 1000px)  { 
+        position: absolute;           
+        left: 0px;
+        margin-left: 0px;
+    }    
+    
+    @media screen and (max-height: 700px)  { 
+        position: absolute;
+        top: 0px;       
+        margin-top: 0px;
+    }
+    
+    
+    
+}
+#nav_fb {
+        cursor: pointer;
+        @include customDive($nav_nav_fb_left,$nav_nav_fb_top,$nav_nav_fb_width,$nav_nav_fb_height);
+    }
+    #nav_website {
+        cursor: pointer;
+        @include customDive($nav_nav_website_left,$nav_nav_website_top,$nav_nav_website_width,$nav_nav_website_height);
+    }
+    #nav_top10 {
+        cursor: pointer;
+        @include customDive($nav_nav_top10_left,$nav_nav_top10_top,$nav_nav_top10_width,$nav_nav_top10_height);
+    }
+    #nav_rule {
+        cursor: pointer;
+        @include customDive($nav_nav_rule_left,$nav_nav_rule_top,$nav_nav_rule_width,$nav_nav_rule_height);
+    }
+    #nav_home {
+        cursor: pointer;
+        @include customDive($nav_nav_home_left,$nav_nav_home_top,$nav_nav_home_width,$nav_nav_home_height);
+    }
+
+#card {
+    overflow: hidden;
+    @include customDive($home_card_left,$home_card_top,$home_card_width,$home_card_height);
+}
+
+#logo {
+    cursor: pointer;
+    @include customDive($home_logo_left,$home_logo_top,$home_logo_width,$home_logo_height);
+} 
+#snow{
+    width: 1260px;
+    height: 350px;
+    
+    .snow1{        
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        width: 50px;
+        height: 50px;
+        background-image: url('../img/common/snow.png');
+        overflow: hidden;
+        background-repeat: no-repeat;
+        background-position: 0px 0px;
+    }
+    .snow2{        
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        width: 50px;
+        height: 50px;
+        background-image: url('../img/common/snow.png');
+        overflow: hidden;
+        background-repeat: no-repeat;
+        background-position: 0px -50px;       
+    }
+    .snow3{     
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        width: 50px;
+        height: 50px;
+        background-image: url('../img/common/snow.png');
+        overflow: hidden;
+        background-repeat: no-repeat;
+        background-position: 0px -100px;        
+    }
+    
+    .snow4{        
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        width: 50px;
+        height: 50px;
+        background-image: url('../img/common/snow.png');
+        overflow: hidden;
+        background-repeat: no-repeat;
+        background-position: 0px -150px;
+    }
+    .snow5{   
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        width: 50px;
+        height: 50px;
+        background-image: url('../img/common/snow.png');
+        overflow: hidden;
+        background-repeat: no-repeat;
+        background-position: 0px -200px;
+    }
+    .snow6{       
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        width: 50px;
+        height: 50px;
+        background-image: url('../img/common/snow.png');
+        overflow: hidden;
+        background-repeat: no-repeat;
+        background-position: 0px -250px; 
+    }
+    .snow7{     
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        width: 50px;
+        height: 50px;
+        background-image: url('../img/common/snow.png');
+        overflow: hidden;
+        background-repeat: no-repeat;
+        background-position: 0px -300px; 
+    }
+    .snow8{   
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        width: 50px;
+        height: 50px;
+        background-image: url('../img/common/snow.png');
+        overflow: hidden;
+        background-repeat: no-repeat;
+        background-position: 0px -350px; 
+    }
+}
+
+@import "nav/buttons/*.png";
+@include all-buttons-sprites;
+.nav_home_active{
+     background-position: 0 -156px;
+}
+.nav_top10_active{
+    background-position: 0 -364px;
+}
+
+.nav_rule_active{
+    background-position: 0 -260px;
+}
+
+
+*/
